agregado parte de informacion y video

--- a/index.html
+++ b/index.html
@@ -56,38 +56,48 @@
             </div>
         </div>
         <div class="productos">
-            <h1>new product</h1>
+            <h1>new <span class="producth1">product</span></h1>
         <div class="carrusel">
-            <div class="carrusel_elemento">
-                <img src="./multimedia/img/macetatubo.jpg" alt="">
+            <div class="carrusel_elemento" id="carrusel_elemento1">
+                <img class="carruselimg" src="./multimedia/img/macetatubo.jpg" alt="">
                 <p>Lorem ipsum dolor sit amet.</p>
-                <p>planta verde</p>
                 <a href="">$1200</a>
             </div>
-            <div class="carrusel_elemento">
-                <img src="./multimedia/img/1100.webp" alt="">
+            <div class="carrusel_elemento" id="carrusel_elemento2">
+                <img class="carruselimg" src="./multimedia/img/1100.webp" alt="">
                 <p>Lorem ipsum dolor sit amet.</p>
                 <a href="">$1800</a>
             </div>
-            <div class="carrusel_elemento">
-                <img src="./multimedia/img/flor.jpg" alt="">
+            <div class="carrusel_elemento" id="carrusel_elemento3">
+                <img class="carruselimg" src="./multimedia/img/flor.jpg" alt="">
                 <p>Lorem ipsum dolor sit amet.</p>
                 <a href="">$950</a>
             </div>
-            <div class="carrusel_elemento">
-                <img src="./multimedia/img/patas.png" alt="">
+            <div class="carrusel_elemento" id="carrusel_elemento4">
+                <img class="carruselimg" src="./multimedia/img/patas.png" alt="">
                 <p>Lorem ipsum dolor sit amet.</p>
                 <a href="">$2400</a>
             </div>
-            <div class="carrusel_elemento">
-                <img src="./multimedia/img/arbolito.webp" alt="">
+            <div class="carrusel_elemento" id="carrusel_elemento5">
+                <img class="carruselimg" src="./multimedia/img/arbolito.webp" alt="">
                 <p>Lorem ipsum dolor sit amet.</p>
                 <a href="">$1100</a>
             </div>
-            <div class="carrusel_elemento">
-                <img src="./multimedia/img/plantita.jpg" alt="">
+            <div class="carrusel_elemento"  id="carrusel_elemento6">
+                <img class="carruselimg" src="./multimedia/img/plantita.jpg" alt="">
                 <p>Lorem ipsum dolor sit amet.</p>
                 <a href="">$750</a>
+            </div>
+        </div>
+        <div class="informacion">
+            <div class="informacion_video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/lzHN_RT0yTk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+            <div class="informacion_us">
+                <h1>about <span class="us_H1">us</span></h1>
+                <p class="informacion_p1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut sapiente pariatur vitae minus deleniti qui, quae error facere amet explicabo quibusdam rem? Quod unde maiores est, maxime, et facere aliquid totam dignissimos accusamus laborum necessitatibus voluptatibus? Modi perferendis quos aperiam facere in illo? Ea dignissimos similique amet, quibusdam sit deserunt.</p>
+                <p class="informacion_p2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus reiciendis culpa praesentium reprehenderit iure animi excepturi error fugiat blanditiis provident.</p>
+                <a class="us_btn" href="">Seguir leyendo</a>
             </div>
         </div>
     </div>
